--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+# Adding config.py, API_practice.ipynb, random_numbers.ipynb to file
+config.py
+API_practice.ipynb
+random_numbers.ipynb
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
