--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-# Adding config.py, API_practice.ipynb, random_numbers.ipynb to file
+# Adding config.py, API_practice.ipynb, random_numbers.ipynb, API_Example.ipynb, try-except.ipynb to file
 config.py
 API_practice.ipynb
 random_numbers.ipynb
