--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ API_practice.ipynb
 random_numbers.ipynb
 API_Example.ipynb
 try-except.ipynb
+Linear Regression.ipynb
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
