--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ random_numbers.ipynb
 API_Example.ipynb
 try-except.ipynb
 Linear Regression.ipynb
+Google_Nearby_Search.ipynb
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
